--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebaseui": "^6.1.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.15.0",
